--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color:white">Audio Performance Testing</h1>
+    <h1 style="color:white">Audio Quality Testing</h1>
     <div class="music-container" id="music-container">
         <div class="music-info">
             <h4 class="title" id="title">`Music</h4>
